// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Solver Numerical Snapshots ElectromagneticsSolver snapshots parallel plate capacitor field is uniform 1`] = `
{
  "electricFieldComponents": [
    0,
    198.3137,
    0,
    0,
    167.0441,
    0,
    0,
    198.3138,
    0,
    0,
    128.7324,
    0,
    -0,
    128.7323,
    0,
  ],
  "fieldMagnitudes": [
    198.3137,
    167.0441,
    198.3138,
    128.7324,
    128.7323,
  ],
  "iterations": 1000,
  "uniformity": 69.5815,
}
`;

exports[`Solver Numerical Snapshots ElectromagneticsSolver snapshots point charge field distribution matches expectations 1`] = `
{
  "electricFieldSamples": [
    -31.4717,
    -2.7261,
    0,
    -2.7261,
    -31.4717,
    0,
    -7.5679,
    -7.5679,
    0,
    43.464,
    -5.0318,
    0,
  ],
  "iterations": 500,
  "potentialSamples": [
    -11.9025,
    -11.9025,
    -2.2103,
    -15.5866,
  ],
  "residual": 2.847e-7,
}
`;

exports[`Solver Numerical Snapshots FluidDynamicsSolver snapshots LBM D2Q9 channel flow develops consistent velocity profile 1`] = `
{
  "avgDensity": 1.0316,
  "densitySamples": [
    1.0311,
    1.0313,
    1.0311,
    1.0294,
    1.0352,
  ],
  "iteration": 500,
  "tau": 0.56,
  "velocityComponents": [
    0.0545,
    -0.0071,
    0.0937,
    -0.0003,
    0.056,
    0.0069,
    0.1037,
    -0.0005,
    0.0664,
    0.0002,
  ],
  "velocityMagnitudes": [
    0.1086,
    0.0564,
    0.1231,
    NaN,
  ],
}
`;

exports[`Solver Numerical Snapshots FluidDynamicsSolver snapshots uniform grid access is consistent with legacy API 1`] = `
{
  "coordinateAtOrigin": [
    0,
    0,
    0,
  ],
  "coordinateAtTest": [
    15.517241379310345,
    10.526315789473683,
    0,
  ],
  "densityConsistency": {
    "legacy": 1.029293,
    "match": false,
    "unified": 1.029293,
  },
  "gridDimensions": [
    2,
    "uniform",
    "node",
  ],
  "indexConsistency": {
    "fluidIdx": 315,
    "match": true,
    "unifiedIdx": 315,
  },
  "totalNodes": 600,
}
`;

exports[`Solver Numerical Snapshots MechanicsSolver snapshots free fall simulation produces consistent results 1`] = `
{
  "finalPosition": {
    "x": 0,
    "y": 8.771298,
    "z": 0,
  },
  "finalRotation": {
    "x": 0,
    "y": 0,
    "z": 0,
  },
  "finalVelocity": {
    "x": 0,
    "y": -4.905,
    "z": 0,
  },
  "kineticEnergy": 49444.308426,
  "potentialEnergy": 353672.366064,
}
`;

exports[`Solver Numerical Snapshots MechanicsSolver snapshots spring oscillator period is consistent 1`] = `
{
  "finalPosition": {
    "x": 1,
    "y": 0,
    "z": 0,
  },
  "finalVelocity": {
    "x": 0,
    "y": 0,
    "z": 0,
  },
  "periodCheck": 0,
  "sampledPositions": [
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
  ],
}
`;

exports[`Solver Numerical Snapshots ThermodynamicsSolver snapshots 1D steady-state heat conduction linear profile 1`] = `
{
  "avgTemperature": 350,
  "linearityCheck": 13.634,
  "slopes": [
    -13.634,
    0,
    0,
    -13.634,
  ],
  "temperatures": [
    352.7268,
    350,
    350,
    350,
    347.2732,
  ],
}
`;

exports[`Solver Numerical Snapshots ThermodynamicsSolver snapshots heat flux continuity at material interface 1`] = `
{
  "fluxRatio": NaN,
  "gradientLeft": 0,
  "gradientRight": 0,
  "interfaceTemperature": 350,
  "temperatures": [
    350,
    350,
    350,
  ],
}
`;

exports[`Solver Numerical Snapshots Unified Grid/Field consistency checks ScalarField interpolation is consistent 1`] = `
{
  "fieldData": [
    0,
    1,
    2,
    3,
    4,
    10,
    11,
    12,
    13,
    14,
    20,
    21,
    22,
    23,
    24,
    30,
    31,
    32,
    33,
    34,
    40,
    41,
    42,
    43,
    44,
  ],
  "linearResults": [
    {
      "point": {
        "x": 0,
        "y": 0,
      },
      "value": 0,
    },
    {
      "point": {
        "x": 2,
        "y": 2,
      },
      "value": 22,
    },
    {
      "point": {
        "x": 0.5,
        "y": 0.5,
      },
      "value": 5.5,
    },
    {
      "point": {
        "x": 1.5,
        "y": 2.5,
      },
      "value": 26.5,
    },
    {
      "point": {
        "x": 3.2,
        "y": 1.8,
      },
      "value": 21.2,
    },
  ],
  "nearestResults": [
    {
      "point": {
        "x": 0,
        "y": 0,
      },
      "value": 0,
    },
    {
      "point": {
        "x": 2,
        "y": 2,
      },
      "value": 22,
    },
    {
      "point": {
        "x": 0.5,
        "y": 0.5,
      },
      "value": 11,
    },
    {
      "point": {
        "x": 1.5,
        "y": 2.5,
      },
      "value": 32,
    },
    {
      "point": {
        "x": 3.2,
        "y": 1.8,
      },
      "value": 23,
    },
  ],
}
`;

exports[`Solver Numerical Snapshots Unified Grid/Field consistency checks UniformGrid 2D indexing is row-major (x-fastest) 1`] = `
{
  "gridInfo": {
    "allRoundtrip": true,
    "dimension": 2,
    "isXFastest": true,
    "spacing": "uniform",
    "totalNodes": 80,
  },
  "sampleIndices": [
    {
      "idx": 0,
      "x": 0,
      "y": 0,
    },
    {
      "idx": 1,
      "x": 1,
      "y": 0,
    },
    {
      "idx": 2,
      "x": 2,
      "y": 0,
    },
    {
      "idx": 3,
      "x": 3,
      "y": 0,
    },
    {
      "idx": 4,
      "x": 4,
      "y": 0,
    },
  ],
  "sampleRoundtrips": [
    {
      "idx": 0,
      "roundtrip": true,
      "x": 0,
      "y": 0,
    },
    {
      "idx": 1,
      "roundtrip": true,
      "x": 1,
      "y": 0,
    },
    {
      "idx": 2,
      "roundtrip": true,
      "x": 2,
      "y": 0,
    },
    {
      "idx": 3,
      "roundtrip": true,
      "x": 3,
      "y": 0,
    },
    {
      "idx": 4,
      "roundtrip": true,
      "x": 4,
      "y": 0,
    },
  ],
}
`;
